--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "egos-website",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.x",
-    "npm": ">=8.0.0"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,9 +19,7 @@
     "clsx": "2.0.0",
     "lucide-react": "0.294.0",
     "tailwind-merge": "2.0.0",
-    "tailwindcss-animate": "1.0.7"
-  },
-  "devDependencies": {
+    "tailwindcss-animate": "1.0.7",
     "typescript": "5.2.2",
     "@types/node": "20.8.10",
     "@types/react": "18.2.37",
