--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,5 @@
 [build]
 builder = "dockerfile"
-buildCommand = "docker build --no-cache --progress=plain ."
 
 [deploy]
-healthcheckPath = "/api/health"
-healthcheckTimeout = 300
-restartPolicyType = "on_failure"
-restartPolicyMaxRetries = 10
-
-[environments.production]
-variables = { NODE_ENV = "production", NPM_CONFIG_CACHE = "/tmp/.npm" }
+startCommand = "npm start"
