--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,9 @@
-registry=https://registry.npmjs.org/
-fetch-retries=5
-fetch-retry-factor=2
-fetch-retry-mintimeout=10000
-fetch-retry-maxtimeout=60000
-cache-max=3600000
+registry=https://registry.yarnpkg.com/
+fetch-retries=10
+fetch-retry-factor=3
+fetch-retry-mintimeout=20000
+fetch-retry-maxtimeout=120000
+cache-max=86400000
 progress=false
-loglevel=warn
+audit=false
+fund=false
