--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "pnpm": ">=8.0.0"
   },
   "scripts": {
     "dev": "next dev",
