--- a/railway.toml
+++ b/railway.toml
@@ -8,4 +8,4 @@ restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
 
 [environments.production]
-variables = { NODE_ENV = "production", NPM_CONFIG_REGISTRY = "https://registry.yarnpkg.com/" }
+variables = { NODE_ENV = "production", PNPM_HOME = "/usr/local/bin" }
