--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
 
         # Handle client-side routing
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ $uri.html /index.html;
         }
 
         # Cache static assets
@@ -22,5 +22,10 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
     }
 }
