--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "egos-website",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x",
-    "yarn": ">=1.22.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,25 +13,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-sheet": "1.0.4",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
-    "lucide-react": "0.294.0",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss-animate": "1.0.7",
-    "typescript": "5.2.2",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.2.5"
+    "next": "15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-sheet": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "15.0.0"
   }
 }
