--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "egos-website",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10.2.3",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
