--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,16 +1,13 @@
 # nixpacks.toml
 
-# Define the phases for building the application
 [phases.setup]
-nixPkgs = ["nodejs_20", "npm"]
-aptPkgs = []
+nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
 
-# Define the start command for running the application
 [start]
 cmd = "npm start"
