--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,8 @@
-# nixpacks.toml
-
 [phases.setup]
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["npm install --legacy-peer-deps"]
 
 [phases.build]
 cmds = ["npm run build"]
