--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "echo 'Dependencies installed successfully'"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.0.0",
@@ -19,7 +18,7 @@
     "react-dom": "^18.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-sheet": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
