--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
