--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-dom": "^18.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-sheet": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -22,7 +21,8 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "date-fns": "^3.3.1",
-    "react-day-picker": "^8.10.1"
+    "react-day-picker": "^8.10.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
