--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tailwindcss-animate": "^1.0.7",
     "date-fns": "^3.3.1",
     "react-day-picker": "^8.10.1",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
