--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "tailwindcss": "^3.3.5",
     "eslint": "^8.53.0",
     "eslint-config-next": "15.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
