--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "egos-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,15 +18,12 @@
     "react-dom": "^18.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dialog": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "date-fns": "^3.3.1",
-    "react-day-picker": "^8.10.1",
-    "jspdf": "^2.5.1",
     "next-themes": "^0.2.1"
   },
   "devDependencies": {
@@ -35,8 +36,5 @@
     "tailwindcss": "^3.3.5",
     "eslint": "^8.53.0",
     "eslint-config-next": "15.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
