--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "next-themes": "^0.2.1"
+    "next-themes": "^0.2.1",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
