--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "next": "15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0"
+    "tailwindcss-animate": "^1.0.7",
+    "next-themes": "^0.2.1",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
