--- a/package.json
+++ b/package.json
@@ -1,42 +1,21 @@
 {
-  "name": "egos-website",
-  "version": "0.1.0",
+  "name": "ego-services",
   "private": true,
-  "engines": {
-    "node": "20.x",
-    "npm": "10.x"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "node server.js",
-    "start:next": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "next": "15.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "next-themes": "^0.2.1",
-    "resend": "^2.0.0"
+    "@emailjs/browser": "^4.4.1",
+    "fix": "^0.0.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "15.0.0"
+    "@vitejs/plugin-vue": "^4.4.0",
+    "vite": "^4.4.5"
   }
 }
